# zlog

./: CMakeLists.txt  README.md
cmake/: zlogConfig.cmake.in
src/: level.c  level.h  spec.c
